--- a/packages/excalidraw/components/TTDDialog/TTDDialog.scss
+++ b/packages/excalidraw/components/TTDDialog/TTDDialog.scss
@@ -202,7 +202,7 @@ $verticalBreakpoint: 861px;
     height: 400px;
     width: auto;
     max-width: 100%;
-    max-height: 448px;
+    max-height: 472px;
 
     @media screen and (max-width: $verticalBreakpoint) {
       width: 100%;
